--- a/Project/ui/manual_entryOLD.ui
+++ b/Project/ui/manual_entryOLD.ui
@@ -24,84 +24,20 @@
   </property>
   <layout class="QVBoxLayout" name="mainManualEntryLayout">
    <property name="spacing">
-    <number>5</number>
+    <number>0</number>
    </property>
    <property name="leftMargin">
-    <number>10</number>
-   </property>
-   <property name="topMargin">
     <number>20</number>
    </property>
+   <property name="topMargin">
+    <number>15</number>
+   </property>
    <property name="rightMargin">
-    <number>10</number>
+    <number>20</number>
    </property>
    <property name="bottomMargin">
-    <number>30</number>
+    <number>15</number>
    </property>
-   <item>
-    <widget class="QFrame" name="customTitleBar">
-     <property name="frameShape">
-      <enum>QFrame::NoFrame</enum>
-     </property>
-     <layout class="QHBoxLayout" name="customTitleLayout">
-      <property name="leftMargin">
-       <number>0</number>
-      </property>
-      <property name="topMargin">
-       <number>0</number>
-      </property>
-      <property name="rightMargin">
-       <number>0</number>
-      </property>
-      <property name="bottomMargin">
-       <number>10</number>
-      </property>
-      <item>
-       <spacer name="horizontalSpacer_1">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item>
-       <widget class="QLabel" name="customTitle">
-        <property name="text">
-         <string>Manual Entry</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <spacer name="horizontalSpacer_2">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item>
-       <widget class="QPushButton" name="customCloseBtn">
-        <property name="text">
-         <string>x</string>
-        </property>
-        <property name="flat">
-         <bool>false</bool>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
    <item>
     <spacer name="verticalSpacer_1">
      <property name="orientation">
@@ -113,33 +49,88 @@
      <property name="sizeHint" stdset="0">
       <size>
        <width>20</width>
-       <height>10</height>
+       <height>25</height>
       </size>
      </property>
     </spacer>
    </item>
    <item>
-    <layout class="QGridLayout" name="manualGridLayout">
+    <widget class="QLabel" name="lblGeneral">
+     <property name="text">
+      <string>Add item :</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <spacer name="verticalSpacer_2">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeType">
+      <enum>QSizePolicy::Fixed</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>30</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item>
+    <layout class="QGridLayout" name="inputFieldsLayout">
      <property name="leftMargin">
       <number>0</number>
      </property>
      <property name="topMargin">
-      <number>20</number>
+      <number>0</number>
      </property>
      <property name="rightMargin">
       <number>0</number>
      </property>
      <property name="bottomMargin">
-      <number>20</number>
+      <number>0</number>
      </property>
      <property name="horizontalSpacing">
       <number>10</number>
      </property>
      <property name="verticalSpacing">
-      <number>20</number>
+      <number>8</number>
      </property>
-     <item row="2" column="0">
-      <widget class="QLabel" name="manualQuantityFieldLbl">
+     <item row="0" column="0">
+      <widget class="QLabel" name="lblProductName">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>100</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="text">
+        <string>Product Name:</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QLineEdit" name="inputProductName">
+       <property name="placeholderText">
+        <string>Enter product name</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="lblQuantity">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
          <horstretch>0</horstretch>
@@ -160,15 +151,15 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="1">
-      <widget class="QLineEdit" name="manualQuantityLineEdit">
+     <item row="1" column="1">
+      <widget class="QLineEdit" name="inputQuantity">
        <property name="placeholderText">
         <string>Enter quantity</string>
        </property>
       </widget>
      </item>
-     <item row="1" column="0">
-      <widget class="QLabel" name="manualSearchFieldLbl">
+     <item row="2" column="0">
+      <widget class="QLabel" name="lblUnitPrice">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
          <horstretch>0</horstretch>
@@ -182,25 +173,19 @@
         </size>
        </property>
        <property name="text">
-        <string>Product Name -</string>
+        <string>Unit Price:</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
        </property>
       </widget>
      </item>
-     <item row="0" column="0">
-      <widget class="QLabel" name="manualProductCodeFieldLbl">
-       <property name="text">
-        <string>Product Code - </string>
+     <item row="2" column="1">
+      <widget class="QLineEdit" name="inputUnitPrice">
+       <property name="placeholderText">
+        <string>Enter unit price</string>
        </property>
       </widget>
-     </item>
-     <item row="1" column="1">
-      <widget class="QComboBox" name="manualSearchComboBox"/>
-     </item>
-     <item row="0" column="1">
-      <widget class="QLineEdit" name="manualProductCodeLineEdit"/>
      </item>
     </layout>
    </item>
@@ -218,13 +203,13 @@
      <property name="sizeHint" stdset="0">
       <size>
        <width>20</width>
-       <height>10</height>
+       <height>20</height>
       </size>
      </property>
     </spacer>
    </item>
    <item>
-    <widget class="QLabel" name="manualStatusLabel">
+    <widget class="QLabel" name="lblError">
      <property name="text">
       <string/>
      </property>
@@ -244,13 +229,13 @@
      <property name="sizeHint" stdset="0">
       <size>
        <width>20</width>
-       <height>10</height>
+       <height>30</height>
       </size>
      </property>
     </spacer>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="manual_actionBtns">
+    <layout class="QHBoxLayout" name="buttonLayout">
      <property name="spacing">
       <number>7</number>
      </property>
@@ -328,7 +313,7 @@
      <property name="sizeHint" stdset="0">
       <size>
        <width>20</width>
-       <height>10</height>
+       <height>25</height>
       </size>
      </property>
     </spacer>
