--- a/Project/ui/manual_entry.ui
+++ b/Project/ui/manual_entry.ui
@@ -196,11 +196,11 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="1">
-      <widget class="QComboBox" name="manualSearchComboBox"/>
-     </item>
      <item row="0" column="1">
       <widget class="QLineEdit" name="manualProductCodeLineEdit"/>
+     </item>
+     <item row="1" column="1">
+      <widget class="QLineEdit" name="manualNameSearchLineEdit"/>
      </item>
     </layout>
    </item>
